--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,37 @@
     <artifactId>lawn-mower</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+
+            <groupId>org.mockito</groupId>
+
+            <artifactId>mockito-all</artifactId>
+
+            <version>1.10.19</version>
+
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>Lawn-Mower</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
